<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_slider_white"
        android:orderInCategory="100"
        android:title="@string/menu_title_text"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_all"
                    android:orderInCategory="1"
                    android:title="@string/menu_all_text"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menu_author"
                    android:orderInCategory="2"
                    android:title="@string/menu_author_text"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menu_name"
                    android:orderInCategory="3"
                    android:title="@string/menu_name_text"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menu_genre"
                    android:orderInCategory="4"
                    android:title="@string/menu_genre_text"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/menu_edition"
                    android:orderInCategory="5"
                    android:title="@string/menu_edition_text"
                    app:showAsAction="never" />

            </group>
        </menu>
    </item>
</menu>
